@@ -205,7 +205,12 @@ public class PreparedBatch extends SqlStatement<PreparedBatch> implements Result
      */
     public PreparedBatch add()
     {
-        bindings.add(getBinding());
+        final Binding currentBinding = getBinding();
+        if (currentBinding.isEmpty()) {
+            throw new IllegalStateException("Attempt to add() a empty batch, you probably didn't mean to do this "
+                    + "- call add() *after* setting batch parameters");
+        }
+        bindings.add(currentBinding);
         getContext().setBinding(new Binding());
         return this;
     }
